<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MovieDetailActivity">

    <ImageView
        android:id="@+id/image_view_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/contentDescriptionBanner"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[12]" />

    <LinearLayout
        android:id="@+id/detail_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_banner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_cover"
                android:layout_width="184dp"
                android:layout_height="280dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/contentDescriptionCover"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars[11]" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movieTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_view_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_view_star"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="8dp"
                        android:background="@android:drawable/btn_star_big_on"
                        android:contentDescription="@string/star"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/text_view_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_margin="16dp"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>